--- a/481-final-project-app/src/styles/global.css
+++ b/481-final-project-app/src/styles/global.css
@@ -114,12 +114,14 @@
 .card {
   padding: 0;
   border-radius: 5px;
-  width: 100px;
+  width: 150px;
   background-color: var(--medium-light);
 }
 
 .card-image{
-  height: 100px;
+  height: 150px;
+  width: 150px;
+  background-color: var(--medium);
   margin: 0
 }
 
@@ -139,6 +141,7 @@
 .flex {
   display: flex;
   gap: 50px;
+  justify-content: center;
 }
 
 .connections-container {
