--- a/481-final-project-app/src/styles/global.css
+++ b/481-final-project-app/src/styles/global.css
@@ -242,6 +242,7 @@
   width: 100%;
   height: 200px;
   background-color: var(--medium);
+  object-fit: cover;
 }
 
 .profile-picture {
@@ -258,9 +259,15 @@
 .profile-header{
   display: block;
   width: 100%;
-  height: 100px;
+  /*height: 100px;*/
   background-color: var(--dark);
   color: #ffffff;
+}
+
+.profile-header-top-row {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
 }
 
 .profile-name {
@@ -270,15 +277,27 @@
   font-size: 20px;
 }
 
+.connect-button {
+  width: 100px;
+  background-color: rgb(79, 145, 185);
+  margin: 10px 200px
+}
+
 .profile-container {
   display: flex;
   align-items:stretch;
   justify-content: center;
-  width: 100vw;
+  width: calc(100vw - 36px);
+
 }
 
 .profile-container > div {
   padding: 50px 10%;
+}
+
+.profile-bio {
+  padding: 0px 200px 25px 200px;
+  font-size: 15px;
 }
 
 .profile-information {
