--- a/481-final-project-app/src/styles/global.css
+++ b/481-final-project-app/src/styles/global.css
@@ -7,13 +7,13 @@
 }
 
 #logo {
-  width: 40px;
-  height: 30px;
-  padding: 10px 20px;
-  margin: 0px 20px;
+  width: 100px;
+  height: 100px;
+  margin: -20px 50px -50px 50px;
 }
 
 #profile-icon {
+  border-radius: 50%;
   width: 30px;
   height: 30px;
 }
