connection page css

--- a/481-final-project-app/src/styles/global.css
+++ b/481-final-project-app/src/styles/global.css
@@ -218,6 +218,7 @@
   border: 1px solid black;
   background-color: var(--medium-light);
   color: black;
+  width: 300px;
 }
 
 .connections-box > div {
