--- a/481-final-project-app/src/styles/global.css
+++ b/481-final-project-app/src/styles/global.css
@@ -283,8 +283,15 @@
   margin: 10px 200px
 }
 
+
 .edit-button {
-  width: 100px;
+  width: 200px;
+  background-color: gray;
+  margin: 10px 200px
+}
+
+.sign-out-button {
+  width: 200px;
   background-color: gray;
   margin: 10px 200px
 }
