--- a/481-final-project-app/src/styles/SignUp.css
+++ b/481-final-project-app/src/styles/SignUp.css
@@ -11,10 +11,10 @@ form.formSignIn, form.formSignUp{
     flex-direction: column;
     align-items: center;
     border: 5px solid #4b207e;
-    margin-top: 300px;
-    margin-left: 600px;
+    margin-top: 100px;
+    margin-left: 450px;
+    margin-bottom: 50px;
     border-radius: 40px;
-
 }
 
 input[type="submit"]{
