--- a/481-final-project-app/src/styles/global.css
+++ b/481-final-project-app/src/styles/global.css
@@ -18,6 +18,11 @@
   height: 30px;
 }
 
+.connection-list *, .message-list *, .card-list * {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .navbar {
   background-color: var(--dark);
   position: fixed;
@@ -161,6 +166,17 @@
   justify-content: center;
 }
 
+.connection-list {
+  max-height: 330px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  scrollbar-width: none;
+}
+
+.connection-list::-webkit-scrollbar {
+display: none;
+}
+
 .message-box{
   display: flex;
   height: 480px;
@@ -212,6 +228,10 @@
 .message-grid:hover, .connection:hover{
   background-color: var(--medium);
   color: var(--light);
+}
+
+.connection > *{
+  justify-content: space-between
 }
 
 .connections-box {
